--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Data in Publications Guide</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{{rootURL}}favicon.ico" type="image/x-icon" />
 
     {{content-for "head"}}
 
