added high-res icon

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{{rootURL}}favicon.ico" type="image/x-icon" />
+    <link rel="icon" sizes="192x192" href="{{rootURL}}icon.png">
+    <link rel="apple-touch-icon" href="{{rootURL}}icon.png">
 
     {{content-for "head"}}
 
