added meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,29 @@
     <title>Data in Publications Guide</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="icon" href="{{rootURL}}favicon.ico" type="image/x-icon" />
     <link rel="icon" sizes="192x192" href="{{rootURL}}icon.png">
     <link rel="apple-touch-icon" href="{{rootURL}}icon.png">
+
+    <meta property="og:url" content="https://adi-cam.github.io/eu-pubwiz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Data in Publications Guide">
+    <meta property="og:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
+    <meta property="og:image:alt" content="XX">
+    <meta property="og:description" content="XX">
+    <meta property="og:site_name" content="Data in Publications Guide">
+    <meta property="og:locale" content="en_GB">
+    <meta property="article:author" content="Publications Office of the European Union">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@EULawDataPubs">
+    <meta name="twitter:creator" content="@EULawDataPubs">
+    <meta name="twitter:url" content="https://adi-cam.github.io/eu-pubwiz">
+    <meta name="twitter:title" content="Data in Publications Guide">
+    <meta name="twitter:description" content="XX">
+    <meta name="twitter:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
+    <meta name="twitter:image:alt" content="XX">
 
     {{content-for "head"}}
 
