--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Data in Publications Guide">
     <meta property="og:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
-    <meta property="og:image:alt" content="XX">
-    <meta property="og:description" content="XX">
+    <meta property="og:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
+    <meta property="og:description" content="Tips and resources that make the data in your government publication more accessible and reusable.">
     <meta property="og:site_name" content="Data in Publications Guide">
     <meta property="og:locale" content="en_GB">
     <meta property="article:author" content="Publications Office of the European Union">
@@ -25,9 +25,9 @@
     <meta name="twitter:creator" content="@EULawDataPubs">
     <meta name="twitter:url" content="https://adi-cam.github.io/eu-pubwiz">
     <meta name="twitter:title" content="Data in Publications Guide">
-    <meta name="twitter:description" content="XX">
+    <meta name="twitter:description" content="Tips and resources that make the data in your government publication more accessible and reusable.">
     <meta name="twitter:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
-    <meta name="twitter:image:alt" content="XX">
+    <meta name="twitter:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
 
     {{content-for "head"}}
 
