--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" sizes="192x192" href="{{rootURL}}icon.png">
     <link rel="apple-touch-icon" href="{{rootURL}}icon.png">
 
-    <meta property="og:url" content="https://adi-cam.github.io/eu-pubwiz">
+    <meta property="og:url" content="https://adi-cam.github.io/data-in-publications-guide">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Data in Publications Guide">
-    <meta property="og:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
+    <meta property="og:image" content="https://adi-cam.github.io/data-in-publications-guide/social.jpg">
     <meta property="og:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
     <meta property="og:description" content="Tips and resources that make the data in your government publication more accessible and reusable.">
     <meta property="og:site_name" content="Data in Publications Guide">
@@ -23,10 +23,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@EULawDataPubs">
     <meta name="twitter:creator" content="@EULawDataPubs">
-    <meta name="twitter:url" content="https://adi-cam.github.io/eu-pubwiz">
+    <meta name="twitter:url" content="https://adi-cam.github.io/data-in-publications-guide">
     <meta name="twitter:title" content="Data in Publications Guide">
     <meta name="twitter:description" content="Tips and resources that make the data in your government publication more accessible and reusable.">
-    <meta name="twitter:image" content="https://adi-cam.github.io/eu-pubwiz/social.jpg">
+    <meta name="twitter:image" content="https://adi-cam.github.io/data-in-publications-guide/social.jpg">
     <meta name="twitter:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
 
     {{content-for "head"}}
