--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
 
     
-<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2Bd6d1eda1%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2Bdc6dec1a%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <!-- EMBER_CLI_FASTBOOT_TITLE -->
 
     <link integrity="" rel="stylesheet" href="/data-in-publications-guide/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
@@ -120,7 +120,7 @@
     </h2>
 
     <p class="section__text">
-      Data and visualisations are important components in publications. The following tips suggest adding data-related sections and recommend ways to structure text and visualisations. This will make your publication pleasant to read and will allow others to reuse it and it's components.
+      Data, visualisations, and text are all important components of your publication. The following tips help you structure these components in a way that makes your publication pleasant to read and allows others to reuse them.
     </p>
 
     <div class="section__buttons">
@@ -175,7 +175,17 @@
 <!---->        </div>
         <div class="section__group ">
           <h3 role="button" id="rec-23" class="section__group__title">
-            <span>In the copyright notice, state the reuse licence of the data and the data visualisations</span>
+            <span>Mention your data and data visualisations in the copyright notice</span>
+
+              <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
+</svg>
+          </h3>
+
+<!---->        </div>
+        <div class="section__group ">
+          <h3 role="button" id="rec-44" class="section__group__title">
+            <span>Obtain necessary permissions and credit third-party elements in the copyright notice</span>
 
               <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
@@ -268,7 +278,7 @@
     </h2>
 
     <p class="section__text">
-      Data visualisations present aspects of and insights from data in a visual manner. Good data visualisations serve a single, clearly defined purpose and can act as centrepieces to your line of reasoning. The following tips help you create understandable, accessible, and appealing data visualisations.
+      Data visualisations present insights from data in a visual manner. Good data visualisations can act as centrepieces to your line of reasoning. The following tips help you create understandable, accessible, and appealing data visualisations.
     </p>
 
     <div class="section__buttons">
@@ -457,7 +467,7 @@
 
         <div class="section__group ">
           <h3 role="button" id="rec-9" class="section__group__title">
-            <span>If necessary, obtain the licences to use third-party visualisations</span>
+            <span>If necessary, obtain the permission to use third-party visualisations</span>
 
               <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
@@ -467,7 +477,7 @@
 <!---->        </div>
         <div class="section__group ">
           <h3 role="button" id="rec-10" class="section__group__title">
-            <span>Licence your visualisations so that others can reuse it</span>
+            <span>Licence your visualisation so that others can reuse it</span>
 
               <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
@@ -516,7 +526,7 @@
     </h2>
 
     <p class="section__text">
-      When public bodies share data openly, they increase transparency, accountability and value creation. Open data is data that anyone can access, use, modify and share for any purpose. In the case of the European Commission, documents and accompanying data are open data by default. Furthermore, whenever possible, they should be made available in machine-readable formats. The recommendations in this section guide you through publishing open data under the FAIR principles: making your data findable, accessible, interoperable and reusable.
+      Data needs to be carefully prepared before being published. The following recommendations guide you through open data practices which help you transform raw data into curated, high-quality and publish-ready datasets.
     </p>
 
     <div class="section__buttons">
@@ -530,8 +540,18 @@
     </div>
 
         <div class="section__group ">
+          <h3 role="button" id="rec-45" class="section__group__title">
+            <span>Improve the openness of your data</span>
+
+              <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
+</svg>
+          </h3>
+
+<!---->        </div>
+        <div class="section__group ">
           <h3 role="button" id="rec-1" class="section__group__title">
-            <span>If necessary, obtain the licences to use third-party data</span>
+            <span>If necessary, obtain the permission to use third-party data</span>
 
               <svg width="20px" height="12px" viewbox="0 0 20 12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
@@ -620,7 +640,7 @@
     </h2>
 
     <p class="section__text">
-      The easiest way to publish your data is with the Publications Office of the European Union (OP). Through that publishing process you receive a unique identifier for your data and the data is included in the data.europa.eu catalogue. If you are publishing in another catalogue, you can still make use of OP services. You can consult PubliCare – the OP services catalogue – and request the services you need using Dempub.
+      Releasing your data and data visualisations as individual components makes your work more impactful. The following tips help you publish those components so that they are easy to locate and access for further reuse.
     </p>
 
     <div class="section__buttons">
@@ -760,8 +780,8 @@
 
     <script src="/data-in-publications-guide/assets/vendor-c9e2953d1d9e142c7e78489d2675aeb6.js"></script>
 <script src="/data-in-publications-guide/assets/chunk.923.a6d917f37bf9971f8195.js"></script>
-<script src="/data-in-publications-guide/assets/chunk.143.1c6a36c6bd7f6a52164f.js"></script>
-    <script src="/data-in-publications-guide/assets/pubwiz-908bd6abfd059e0d3edae819d0e7ded4.js"></script>
+<script src="/data-in-publications-guide/assets/chunk.143.093194a6c84a839a9d68.js"></script>
+    <script src="/data-in-publications-guide/assets/pubwiz-e26c7bee22c0c8b2d7c78744214f3a44.js"></script>
 
     
   </body>
