--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
 
     
-<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2B236f77b6%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2Bc42ff146%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <!-- EMBER_CLI_FASTBOOT_TITLE -->
 
     <link integrity="" rel="stylesheet" href="/data-in-publications-guide/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
@@ -755,7 +755,7 @@
       </p>
 
       <p>
-        <a href="#">
+        <a href="./2022-data-in-publications-guide.pdf">
           <svg width="20px" height="20px" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M11.7997293,0 C12.5574356,0 13.2793667,0.329658158 13.7851886,0.906627829 L17.3187926,4.93726112 C17.7574222,5.43758739 18,6.08591873 18,6.75790602 L18,17.7272727 C18,18.9824653 17.0050772,20 15.7777778,20 L4.22222222,20 C2.99492278,20 2,18.9824653 2,17.7272727 L2,2.27272727 C2,1.01753466 2.99492278,0 4.22222222,0 L11.7997293,0 Z M10,1.818 L4.22222222,1.81818182 C4.00403565,1.81818182 3.82257034,1.97897742 3.78493837,2.19102215 L3.77777778,2.27272727 L3.77777778,17.7272727 C3.77777778,17.9504181 3.93500014,18.1360076 4.14233277,18.1744948 L4.22222222,18.1818182 L15.7777778,18.1818182 C15.9959643,18.1818182 16.1774297,18.0210226 16.2150616,17.8089778 L16.2222222,17.7272727 L16.222,7 L11,7 C10.4871642,7 10.0644928,6.66910841 10.0067277,6.24281811 L10,6.14285714 L10,1.818 Z M12.0008089,1.84174248 L11.9999808,5.28541214 L15.236,5.285 L12.4615491,2.12039109 C12.3385332,1.98007207 12.1771712,1.88363568 12.0008089,1.84174248 Z" fill="#062FC5" fill-rule="nonzero"></path>
 </svg>
@@ -764,7 +764,7 @@
       </p>
 
       <p>
-        <a href="#">
+        <a href="./2022-data-in-publications-guide-extended.pdf">
           <svg width="20px" height="20px" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M9.79972931,7.81818182 L2.22222222,7.81818182 C2.00403565,7.81818182 1.82257034,7.97897742 1.78493837,8.19102215 L1.77777778,8.27272727 L1.77777778,23.7272727 C1.77777778,23.9504181 1.93500014,24.1360076 2.14233277,24.1744948 L2.22222222,24.1818182 L13.7777778,24.1818182 C13.9959643,24.1818182 14.1774297,24.0210226 14.2150616,23.8089778 L14.2222222,23.7272727 L14.2222222,12.757906 C14.2222222,12.5712429 14.1660699,12.3900557 14.0627403,12.2383314 L13.9951531,12.1510244 L10.4615491,8.12039109 C10.3170285,7.95554262 10.1195833,7.85126022 9.90706771,7.82482951 L9.79972931,7.81818182 Z" fill="#F0F4FB" fill-rule="nonzero"></path>
   <path d="M13.7997293,0 C14.5574356,0 15.2793667,0.329658158 15.7851886,0.906627829 L19.3187926,4.93726112 C19.7574222,5.43758739 20,6.08591873 20,6.75790602 L20,17.7272727 C20,18.9824653 19.0050772,20 17.7777778,20 L6.22222222,20 C4.99492278,20 4,18.9824653 4,17.7272727 L4,2.27272727 C4,1.01753466 4.99492278,0 6.22222222,0 L13.7997293,0 Z M12,1.818 L6.22222222,1.81818182 C6.00403565,1.81818182 5.82257034,1.97897742 5.78493837,2.19102215 L5.77777778,2.27272727 L5.77777778,17.7272727 C5.77777778,17.9504181 5.93500014,18.1360076 6.14233277,18.1744948 L6.22222222,18.1818182 L17.7777778,18.1818182 C17.9959643,18.1818182 18.1774297,18.0210226 18.2150616,17.8089778 L18.2222222,17.7272727 L18.222,7 L13,7 C12.4871642,7 12.0644928,6.66910841 12.0067277,6.24281811 L12,6.14285714 L12,1.818 Z M14.0008089,1.84174248 L13.9999808,5.28541214 L17.236,5.285 L14.4615491,2.12039109 C14.3385332,1.98007207 14.1771712,1.88363568 14.0008089,1.84174248 Z" fill="#062FC5" fill-rule="nonzero"></path>
@@ -780,8 +780,8 @@
 
     <script src="/data-in-publications-guide/assets/vendor-c9e2953d1d9e142c7e78489d2675aeb6.js"></script>
 <script src="/data-in-publications-guide/assets/chunk.923.a6d917f37bf9971f8195.js"></script>
-<script src="/data-in-publications-guide/assets/chunk.143.253aafe9e723bf445472.js"></script>
-    <script src="/data-in-publications-guide/assets/pubwiz-d888bf9e8f9aab4d7d46b6b2b75fb1b3.js"></script>
+<script src="/data-in-publications-guide/assets/chunk.143.2c260ca48e895680fa8e.js"></script>
+    <script src="/data-in-publications-guide/assets/pubwiz-211d16774dc1f36a62603ae7f5364d3f.js"></script>
 
     
   </body>
