--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image:alt" content="To the left, there are three icons that represent different publication formats: on a mobile device, on an A4-paper and on a tablet. The publications contain text and data visualisations. To the right, colorful icons are arranged in a semi-circle. The icons represent the main chapters of the guide: structure, text, data visualisations, preparing data, preparing visualisations, and publishing.">
 
     
-<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2Bcce96085%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="pubwiz/config/environment" content="%7B%22modulePrefix%22%3A%22pubwiz%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fdata-in-publications-guide%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22pubwiz%22%2C%22version%22%3A%220.0.0%2Bc0e07811%22%7D%2C%22fastboot%22%3A%7B%22hostWhitelist%22%3A%5B%22adi-cam.github.io%22%2C%7B%7D%2C%7B%7D%5D%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <!-- EMBER_CLI_FASTBOOT_TITLE -->
 
     <link integrity="" rel="stylesheet" href="/data-in-publications-guide/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
@@ -749,8 +749,9 @@
       <p>
         <button type="button">
           <svg width="20px" height="20px" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <path d="M17.5,3 C18.8807119,3 20,4.11928813 20,5.5 L20,14.5 C20,15.8807119 18.8807119,17 17.5,17 L2.5,17 C1.11928813,17 0,15.8807119 0,14.5 L0,5.5 C0,4.11928813 1.11928813,3 2.5,3 L17.5,3 Z M18,6.186 L11.7464188,11.5932377 C10.6456379,12.5449518 9.03015212,12.56444 7.90932101,11.6657973 L7.75964124,11.5375655 L2,6.269 L2,14.5 C2,14.7454599 2.17687516,14.9496084 2.41012437,14.9919443 L2.5,15 L17.5,15 C17.7454599,15 17.9496084,14.8231248 17.9919443,14.5898756 L18,14.5 L18,6.186 Z M16.313,5 L3.575,5 L9.10943495,10.0617413 C9.45244706,10.3754614 9.96093534,10.4083062 10.3387753,10.1561406 L10.4383608,10.0802987 L16.313,5 Z" fill="#062FC5" fill-rule="nonzero"></path>
+  <path d="M17.5,3 C18.8807119,3 20,4.11928813 20,5.5 L20,14.5 C20,15.8807119 18.8807119,17 17.5,17 L2.5,17 C1.11928813,17 0,15.8807119 0,14.5 L0,5.5 C0,4.11928813 1.11928813,3 2.5,3 L17.5,3 Z M18,6.186 L11.7464188,11.5932377 C10.6456379,12.5449518 9.03015212,12.56444 7.90932101,11.6657973 L7.75964124,11.5375655 L2,6.269 L2,14.5 C2,14.7454599 2.17687516,14.9496084 2.41012437,14.9919443 L2.5,15 L17.5,15 C17.7454599,15 17.9496084,14.8231248 17.9919443,14.5898756 L18,14.5 L18,6.186 Z M16.313,5 L3.575,5 L9.10943495,10.0617413 C9.45244706,10.3754614 9.96093534,10.4083062 10.3387753,10.1561406 L10.4383608,10.0802987 L16.313,5 Z" fill="#3366CC" fill-rule="nonzero"></path>
 </svg>
+
           Email link
         </button>
       </p>
@@ -781,8 +782,8 @@
 
     <script src="/data-in-publications-guide/assets/vendor-c9e2953d1d9e142c7e78489d2675aeb6.js"></script>
 <script src="/data-in-publications-guide/assets/chunk.923.a6d917f37bf9971f8195.js"></script>
-<script src="/data-in-publications-guide/assets/chunk.143.ccf0aba9261b2526b1b6.js"></script>
-    <script src="/data-in-publications-guide/assets/pubwiz-a1b90849bd0c8436ce7b880da5890936.js"></script>
+<script src="/data-in-publications-guide/assets/chunk.143.120a26958a452c7a083f.js"></script>
+    <script src="/data-in-publications-guide/assets/pubwiz-3d7388d6a8bebca7f085e094977fbaec.js"></script>
 
     
   </body>
